fix(backend): fix merge errors