@@ -6,6 +6,7 @@ import de.jobst.resulter.adapter.driver.web.dto.EventDto;
 import de.jobst.resulter.adapter.driver.web.dto.EventResultsDto;
 import de.jobst.resulter.adapter.driver.web.dto.EventStatusDto;
 import de.jobst.resulter.adapter.driver.web.mapper.EventMapper;
+import de.jobst.resulter.adapter.driver.web.mapper.EventResultsMapper;
 import de.jobst.resulter.application.certificate.CertificateServiceImpl;
 import de.jobst.resulter.application.port.*;
 import de.jobst.resulter.application.util.FilterAndSortConverter;
@@ -37,28 +38,21 @@ public class EventController {
 
     private final EventService eventService;
     private final ResultListService resultListService;
-    private final OrganisationService organisationService;
-    private final EventCertificateService eventCertificateService;
     private final MediaFileService mediaFileService;
-    private final de.jobst.resulter.application.port.SplitTimeListRepository splitTimeListRepository;
+    private final SplitTimeListRepository splitTimeListRepository;
     private final CupRepository cupRepository;
     private final EventMapper eventMapper;
-    private final de.jobst.resulter.adapter.driver.web.mapper.EventResultsMapper eventResultsMapper;
+    private final EventResultsMapper eventResultsMapper;
 
     public EventController(
             EventService eventService,
-            ResultListService resultListService,
-            OrganisationService organisationService,
-            EventCertificateService eventCertificateService,
-            MediaFileService mediaFileService,
-            de.jobst.resulter.application.port.SplitTimeListRepository splitTimeListRepository,
+            ResultListService resultListService, MediaFileService mediaFileService,
+            SplitTimeListRepository splitTimeListRepository,
             CupRepository cupRepository,
             EventMapper eventMapper,
-            de.jobst.resulter.adapter.driver.web.mapper.EventResultsMapper eventResultsMapper) {
+            EventResultsMapper eventResultsMapper) {
         this.eventService = eventService;
         this.resultListService = resultListService;
-        this.organisationService = organisationService;
-        this.eventCertificateService = eventCertificateService;
         this.mediaFileService = mediaFileService;
         this.splitTimeListRepository = splitTimeListRepository;
         this.cupRepository = cupRepository;
@@ -73,14 +67,6 @@ public class EventController {
         List<EventDto> eventDtos = eventMapper.toDtos(events, hasSplitTimesMap);
         return ResponseEntity.ok(
                 eventDtos.stream().sorted(Comparator.reverseOrder()).toList());
-        return ResponseEntity.ok(eventDtos.stream()
-        Map<EventId, Boolean> hasSplitTimesByEventId = hasSplitTimesByEventId(events);
-        return ResponseEntity.ok(events.stream()
-                .map(x -> eventMapper.toDto(x, hasSplitTimes(x)))
-                .map(x -> EventDto.from(x, organisationService, eventCertificateService,
-                        hasSplitTimesByEventId.getOrDefault(x.getId(), Boolean.FALSE)))
-                .sorted(Comparator.reverseOrder())
-                .toList());
     }
 
     private Boolean hasSplitTimes(Event event) {
@@ -111,42 +97,9 @@ public class EventController {
         Map<Long, Boolean> hasSplitTimesMap = batchHasSplitTimes(events.getContent());
         List<EventDto> eventDtos = eventMapper.toDtos(events.getContent(), hasSplitTimesMap);
 
-        Map<EventId, Boolean> hasSplitTimesByEventId = hasSplitTimesByEventId(events.getContent());
-        return ResponseEntity.ok(new PageImpl<>(
-                eventDtos,
-                events.getContent().stream()
-                        .map(x -> EventDto.from(x, organisationService, eventCertificateService,
-                                hasSplitTimesByEventId.getOrDefault(x.getId(), Boolean.FALSE)))
-                        .map(x -> eventMapper.toDto(x, hasSplitTimes(x)))
-                        .toList(),
-                FilterAndSortConverter.mapOrderProperties(events.getPageable(), EventDto::mapOrdersDomainToDto),
-                events.getTotalElements()));
-    }
-
-    private Map<EventId, Boolean> hasSplitTimesByEventId(Collection<Event> events) {
-        if (events.isEmpty()) {
-            return Map.of();
-        }
-
-        Set<EventId> eventIds = events.stream().map(Event::getId).collect(Collectors.toSet());
-        Map<EventId, Boolean> hasSplitTimesByEventId = new HashMap<>();
-        eventIds.forEach(eventId -> hasSplitTimesByEventId.put(eventId, Boolean.FALSE));
-
-        Map<ResultListId, EventId> resultListEventById = resultListService.findAll().stream()
-                .filter(resultList -> eventIds.contains(resultList.getEventId()))
-                .collect(Collectors.toMap(ResultList::getId, ResultList::getEventId, (left, right) -> left));
-
-        if (resultListEventById.isEmpty()) {
-            return hasSplitTimesByEventId;
-        }
-
-        splitTimeListRepository.findAll().stream()
-                .map(SplitTimeList::getResultListId)
-                .map(resultListEventById::get)
-                .filter(Objects::nonNull)
-                .forEach(eventId -> hasSplitTimesByEventId.put(eventId, Boolean.TRUE));
-
-        return hasSplitTimesByEventId;
+        return ResponseEntity.ok(new PageImpl<>(eventDtos,
+            FilterAndSortConverter.mapOrderProperties(events.getPageable(), EventDto::mapOrdersDomainToDto),
+            events.getTotalElements()));
     }
 
     @GetMapping("/event_status")
@@ -186,18 +139,18 @@ public class EventController {
         }
         Map<Long, Boolean> hasSplitTimesMap = batchHasSplitTimes(List.of(event));
         List<EventDto> eventDtos = eventMapper.toDtos(List.of(event), hasSplitTimesMap);
-        return ResponseEntity.ok(eventDtos.get(0));
+        return ResponseEntity.ok(eventDtos.getFirst());
     }
 
     @GetMapping("/event/{id}")
     public ResponseEntity<EventDto> getEvent(@PathVariable Long id) {
         Event event = eventService.findById(EventId.of(id)).orElseThrow(ResourceNotFoundException::new);
 
-        // Batch load organisations even for single event to avoid N+1
+        // Batch load organizations even for single event to avoid N+1
         Map<Long, Boolean> hasSplitTimesMap = batchHasSplitTimes(List.of(event));
         List<EventDto> eventDtos = eventMapper.toDtos(List.of(event), hasSplitTimesMap);
 
-        return ResponseEntity.ok(eventDtos.get(0));
+        return ResponseEntity.ok(eventDtos.getFirst());
     }
 
     @PutMapping("/event/{id}")
@@ -222,7 +175,7 @@ public class EventController {
                 eventDto.aggregateScore());
         Map<Long, Boolean> hasSplitTimesMap = batchHasSplitTimes(List.of(event));
         List<EventDto> eventDtos = eventMapper.toDtos(List.of(event), hasSplitTimesMap);
-        return ResponseEntity.ok(eventDtos.get(0));
+        return ResponseEntity.ok(eventDtos.getFirst());
     }
 
     @DeleteMapping("/event/{id}")
